--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "box-node-sdk": "^1.3.0",
     "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
